use better ansible practices

--- a/templates/wp-config.php.j2
+++ b/templates/wp-config.php.j2
@@ -35,7 +35,7 @@ define('DB_COLLATE', '{{wp_db_collate}}');
  *
  * @since 2.6.0
  */
-{{wp_salt.stdout}}
+{{wp_salt}}
 /**#@-*/
 /**
  * WordPress Database Table prefix.
